--- a/src/app/compra/compra.list.component.html
+++ b/src/app/compra/compra.list.component.html
@@ -3,12 +3,7 @@
     <mat-card-title>
       <div class="d-flex align-items-center justify-content-between">
         <h4 class="m-0">Compra</h4>
-        <button type="button"
-                (click)="openForm()"
-                pTooltip="Inserir Novo Registro"
-                mat-icon-button>
-          <mat-icon>add</mat-icon>
-        </button>
+        <app-novo (onClick)="openForm()"></app-novo>
       </div>
     </mat-card-title>
     <mat-card-content>
@@ -21,17 +16,17 @@
 
           <ng-container matColumnDef="id">
             <mat-header-cell *matHeaderCellDef mat-sort-header>Código</mat-header-cell>
-            <mat-cell *matCellDef="let row">{{row.id}}</mat-cell>
+            <mat-cell *matCellDef="let row" (click)="openBottomSheet(row.id)">{{row.id}}</mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="fornecedor">
             <mat-header-cell *matHeaderCellDef mat-sort-header>Fornecedor</mat-header-cell>
-            <mat-cell *matCellDef="let row">{{row.fornecedor.nomeFantasia}}</mat-cell>
+            <mat-cell *matCellDef="let row" (click)="openBottomSheet(row.id)">{{row.fornecedor.nomeFantasia}}</mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="dataCompra">
             <mat-header-cell *matHeaderCellDef mat-sort-header>Data da Compra</mat-header-cell>
-            <mat-cell *matCellDef="let row">{{row.dataCompra}}</mat-cell>
+            <mat-cell *matCellDef="let row" (click)="openBottomSheet(row.id)">{{row.dataCompra}}</mat-cell>
           </ng-container>
 
 
@@ -58,7 +53,8 @@
           </mat-row>
         </mat-table>
 
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 50]"></mat-paginator>
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 50, 100]"
+                       [pageSize]="100"></mat-paginator>
       </div>
     </mat-card-content>
   </mat-card>
