--- a/src/app/fornecedor/fornecedor.list.component.html
+++ b/src/app/fornecedor/fornecedor.list.component.html
@@ -3,12 +3,7 @@
     <mat-card-title>
       <div class="d-flex align-items-center justify-content-between">
         <h4 class="m-0">Fornecedor</h4>
-        <button type="button"
-                (click)="openForm()"
-                pTooltip="Inserir Novo Registro"
-                mat-icon-button>
-          <mat-icon>add</mat-icon>
-        </button>
+        <app-novo (onClick)="openForm()"></app-novo>
       </div>
     </mat-card-title>
     <mat-card-content>
@@ -21,26 +16,26 @@
 
           <ng-container matColumnDef="id">
             <mat-header-cell *matHeaderCellDef mat-sort-header>Código</mat-header-cell>
-            <mat-cell *matCellDef="let row">{{row.id}}</mat-cell>
+            <mat-cell *matCellDef="let row" (click)="openBottomSheet(row.id)">{{row.id}}</mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="razaoSocial">
             <mat-header-cell *matHeaderCellDef mat-sort-header>Razão Social</mat-header-cell>
-            <mat-cell *matCellDef="let row">{{row.razaoSocial}}</mat-cell>
+            <mat-cell *matCellDef="let row" (click)="openBottomSheet(row.id)">{{row.razaoSocial}}</mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="nomeFantasia">
             <mat-header-cell *matHeaderCellDef mat-sort-header>Nome Fantasia</mat-header-cell>
-            <mat-cell *matCellDef="let row">{{row.nomeFantasia}}</mat-cell>
+            <mat-cell *matCellDef="let row" (click)="openBottomSheet(row.id)">{{row.nomeFantasia}}</mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="cnpj">
             <mat-header-cell *matHeaderCellDef mat-sort-header>CNPJ</mat-header-cell>
-            <mat-cell *matCellDef="let row">{{row.cnpj}}</mat-cell>
+            <mat-cell *matCellDef="let row" (click)="openBottomSheet(row.id)">{{row.cnpj}}</mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="actions">
-            <mat-header-cell *matHeaderCellDef> Opções </mat-header-cell>
+            <mat-header-cell *matHeaderCellDef>Opções</mat-header-cell>
             <mat-cell *matCellDef="let row">
               <button class="btn btn-outline-secondary rounded mr-2"
                       type="button"
@@ -61,7 +56,8 @@
           <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
         </mat-table>
 
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 50]"></mat-paginator>
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 50, 100]"
+                       [pageSize]="100"></mat-paginator>
       </div>
     </mat-card-content>
   </mat-card>
