--- a/src/app/sidenav/sidenav.component.css
+++ b/src/app/sidenav/sidenav.component.css
@@ -1,25 +1,19 @@
-/*#btn-sidenav > i {*/
-/*  color: #FFFFFF;*/
-/*}*/
-
-/*#btn-sidenav {*/
-/*  background-color: transparent;*/
-/*  border-color: transparent;*/
-/*  margin-right: 5px;*/
-/*}*/
-
 .example-sidenav {
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  height: 95vh;
+  height: calc(100vh - 50px);
 }
 
 mat-sidenav {
-  width: 250px !important;
+  width: 260px !important;
 }
 
-/*.mat-list-item-content {*/
-/*  padding: 0 0 0 20px;*/
-/*}*/
+mat-drawer-container {
+  background-color: transparent;
+}
+
+.color-toolbar {
+  color: #000000;
+}
