--- a/src/app/usuario/usuario.list.component.html
+++ b/src/app/usuario/usuario.list.component.html
@@ -3,12 +3,7 @@
     <mat-card-title>
       <div class="d-flex align-items-center justify-content-between">
         <h4 class="m-0">Usuário</h4>
-        <button type="button"
-                (click)="openForm()"
-                pTooltip="Inserir Novo Registro"
-                mat-icon-button>
-          <mat-icon>add</mat-icon>
-        </button>
+        <app-novo (onClick)="openForm()"></app-novo>
       </div>
     </mat-card-title>
     <mat-card-content>
@@ -21,17 +16,17 @@
 
           <ng-container matColumnDef="id">
             <mat-header-cell *matHeaderCellDef mat-sort-header>Código</mat-header-cell>
-            <mat-cell *matCellDef="let row">{{row.id}}</mat-cell>
+            <mat-cell *matCellDef="let row" (click)="openBottomSheet(row.id)">{{row.id}}</mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="nome">
             <mat-header-cell *matHeaderCellDef mat-sort-header>Nome</mat-header-cell>
-            <mat-cell *matCellDef="let row">{{row.nome}}</mat-cell>
+            <mat-cell *matCellDef="let row" (click)="openBottomSheet(row.id)">{{row.nome}}</mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="usuario">
             <mat-header-cell *matHeaderCellDef mat-sort-header>Usuário</mat-header-cell>
-            <mat-cell *matCellDef="let row">{{row.username}}</mat-cell>
+            <mat-cell *matCellDef="let row" (click)="openBottomSheet(row.id)">{{row.username}}</mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="actions">
@@ -56,7 +51,8 @@
           <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
         </mat-table>
 
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 50]"></mat-paginator>
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 50, 100]"
+                       [pageSize]="100"></mat-paginator>
       </div>
     </mat-card-content>
   </mat-card>
