--- a/src/app/emprestimo/emprestimo.form.component.html
+++ b/src/app/emprestimo/emprestimo.form.component.html
@@ -2,11 +2,7 @@
   <mat-card>
     <mat-card-title>
       <div class="d-flex align-items-center">
-        <button type="button"
-                (click)="back()"
-                mat-icon-button>
-          <mat-icon>arrow_back_ios</mat-icon>
-        </button>
+        <app-voltar (onClick)="back()"></app-voltar>
         <h4 class="m-0">Cadastro de Empréstimo</h4>
       </div>
     </mat-card-title>
@@ -28,7 +24,7 @@
 
           <div class="col-md-4">
             <div class="form-group">
-              <label for="usuarioEmprestimo">Usuário Empréstimo</label>
+              <label for="usuarioEmprestimo">Aluno/Professor</label>
               <span class="field-required">*</span>
               <p-autoComplete id="usuarioEmprestimo"
                               name="usuarioEmprestimo"
@@ -69,6 +65,7 @@
                           dataType="string"
                           dateFormat="dd/mm/yy"
                           inputStyleClass="form-control"
+                          [maxDate]="maxDate"
                           [locale]="pt"
                           [style]="{width: '100%'}"
                           [(ngModel)]="object.dataEmprestimo">
@@ -85,6 +82,7 @@
                               name="item"
                               appendTo="body"
                               field="nome"
+                              #itemToAdd
                               inputStyleClass="form-control"
                               (keyup.control.enter)="insertItem()"
                               [(ngModel)]="emprestimoItem.item"
@@ -115,6 +113,7 @@
               <label for="qtde">Quantidade</label>
               <input type="number"
                      id="qtde"
+                     autocomplete="off"
                      [(ngModel)]="emprestimoItem.qtde"
                      (keyup.control.enter)="insertItem()"
                      name="qtde"
@@ -181,20 +180,8 @@
 
         <div class="row">
           <div class="col-md-12 d-flex justify-content-end">
-            <button type="button"
-                    class="mr-2 w-100px br-25px"
-                    mat-stroked-button
-                    (click)="back()">
-              Cancelar
-            </button>
-
-            <button type="button"
-                    color="primary"
-                    class="w-100px br-25px"
-                    mat-stroked-button
-                    (click)="save()">
-              Salvar
-            </button>
+            <app-cancelar (onClick)="back()"></app-cancelar>
+            <app-salvar (onClick)="save()"></app-salvar>
           </div>
         </div>
       </form>
