--- a/src/app/emprestimo/emprestimo.list.component.html
+++ b/src/app/emprestimo/emprestimo.list.component.html
@@ -3,12 +3,7 @@
     <mat-card-title>
       <div class="d-flex align-items-center justify-content-between">
         <h4 class="m-0">Empréstimo</h4>
-        <button type="button"
-                (click)="openForm()"
-                pTooltip="Inserir Novo Registro"
-                mat-icon-button>
-          <mat-icon>add</mat-icon>
-        </button>
+        <app-novo (onClick)="openForm()"></app-novo>
       </div>
     </mat-card-title>
     <mat-card-content>
@@ -21,22 +16,22 @@
 
           <ng-container matColumnDef="id">
             <mat-header-cell *matHeaderCellDef mat-sort-header>Código</mat-header-cell>
-            <mat-cell *matCellDef="let row">{{row.id}}</mat-cell>
+            <mat-cell *matCellDef="let row" (click)="openBottomSheet(row.id)">{{row.id}}</mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="usuarioEmprestimo">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>Usuário Empréstimo</mat-header-cell>
-            <mat-cell *matCellDef="let row">{{row?.usuarioEmprestimo?.nome}}</mat-cell>
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Aluno/Professor</mat-header-cell>
+            <mat-cell *matCellDef="let row" (click)="openBottomSheet(row.id)">{{row?.usuarioEmprestimo?.nome}}</mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="usuarioResponsavel">
             <mat-header-cell *matHeaderCellDef mat-sort-header>Usuário Responsável</mat-header-cell>
-            <mat-cell *matCellDef="let row">{{row?.usuarioResponsavel?.nome}}</mat-cell>
+            <mat-cell *matCellDef="let row" (click)="openBottomSheet(row.id)">{{row?.usuarioResponsavel?.nome}}</mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="dataEmprestimo">
             <mat-header-cell *matHeaderCellDef mat-sort-header>Data do Empréstimo</mat-header-cell>
-            <mat-cell *matCellDef="let row">{{row?.dataEmprestimo}}</mat-cell>
+            <mat-cell *matCellDef="let row" (click)="openBottomSheet(row.id)">{{row?.dataEmprestimo}}</mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="actions">
@@ -61,7 +56,8 @@
           <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
         </mat-table>
 
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 50]"></mat-paginator>
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 50, 100]"
+                       [pageSize]="100"></mat-paginator>
       </div>
     </mat-card-content>
   </mat-card>
