--- a/src/styles.css
+++ b/src/styles.css
@@ -24,31 +24,6 @@ body {
   border-radius: 10px !important;
 }
 
-body::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #F5F5F5;
-  border-radius: 10px;
-}
-
-body::-webkit-scrollbar {
-  width: 10px;
-  background-color: #F5F5F5;
-}
-
-body::-webkit-scrollbar-thumb {
-  background-color: rgba(6, 6, 6, 0.48);
-  border-radius: 10px;
-  background-image: -webkit-linear-gradient(0deg,
-  rgba(255, 255, 255, 0.5) 25%,
-  transparent 25%,
-  transparent 50%,
-  rgba(255, 255, 255, 0.5) 50%,
-  rgba(255, 255, 255, 0.5) 75%,
-  transparent 75%,
-  transparent)
-}
-
-
 /* style's default modal */
 .ui-dialog {
   border-radius: 10px !important;
@@ -56,13 +31,16 @@ body::-webkit-scrollbar-thumb {
 
 .ui-dialog-content {
   overflow: hidden !important;
+  padding: 3em 2em !important;
 }
 
 .ui-dialog-titlebar {
   border-radius: 10px 10px 0 0 !important;
+  background-color: #FFFFFF !important;
 }
 
 .ui-dialog-footer {
+  background-color: #FFFFFF !important;
   border-radius: 0 0 10px 10px !important;
 }
 
@@ -88,9 +66,25 @@ table {
   max-width: 10% !important;
 }
 
+.mat-header-cell {
+  font-weight: bolder !important;
+}
+
 .mat-form-field {
   font-size: 14px;
   width: 100%;
 }
+
+mat-row:nth-child(even) {
+  background-color: #f5f5f5;
+}
+
+@media (max-width: 1200px) {
+
+  mat-cell {
+    cursor: pointer;
+  }
+}
+
 
 
